# parser_task_work

./: .gitignore  README.md  pyproject.toml
src/: fun.py  main.py  vacancies.json
