[tool.poetry]
name = "parser-task-work"
version = "0.1.0"
description = "code_for_skypro_finalwork"
authors = ["Trashcorp567 <Trashcorp567@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_task_work"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
